fix(index): add max width of text

--- a/engine-ui/packages/console-ui/src/webapps/main/styles/views/portal.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/views/portal.scss
@@ -25,6 +25,7 @@
                 margin-left: 30px;
                 margin-top: 110px;
                 float: left;
+                max-width: 370px;
     
                 h1 {
                     font-size: 36px;
