feat(console): add switch queue
add switch queue

--- a/engine-ui/packages/console-ui/src/webapps/console/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/main.scss
@@ -17,6 +17,13 @@ table{
 .text-middle{
     text-align: center;
 }
-.ant-table-thead > tr > th.text-middle{
+.text-left {
+    text-align: left;
+}
+.text-right {
+    text-align: right;
+    float: right;
+}
+.ant-table-thead > tr > th:text-middle {
     text-align: center;
 }
