--- a/engine-ui/packages/console-ui/src/webapps/science/components/commonEditor/ide.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/components/commonEditor/ide.scss
@@ -212,3 +212,39 @@
     float: right;
     padding-right: 18px;
 }
+
+.c-panel-siderbar{
+    width: 30px;
+    z-index: 999;
+    &.c-panel-siderbar--open{
+        width:300px;
+        box-shadow: -4px 10px 10px 0 rgba(0, 0, 0, 0.2);
+    }
+    &.ant-tabs-vertical{
+        & > .ant-tabs-bar {
+            border-left: 1px solid #dddddd;
+            background: #f5f5f5;
+            .ant-tabs-tab{
+                margin-bottom: 0px;
+                border-bottom: 1px solid #DDDDDD;
+                padding: 17px 8px 17px 9px;
+                line-height: 13px;
+                letter-spacing: 3px;
+                height: auto;
+                user-select: none;
+                writing-mode: tb-rl;
+            }
+        }
+        &.ant-tabs-right > .ant-tabs-bar{
+            .ant-tabs-ink-bar{
+                width: 0px;
+            }
+        }
+        > .ant-tabs-content{
+            position: relative;
+            height: 100%;
+            background: #f5f5f5;
+            border-right: 1px solid #dddddd;
+        }
+    }
+}
