feat(science): add default view

--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/index.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/index.scss
@@ -1,6 +1,7 @@
 @import './siderbar.scss';
 @import './panelGroup.scss';
 @import './mainBench.scss';
+@import './defaultView.scss';
 .sidebar {
 
    .s-catalogue {
