--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/index.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/index.scss
@@ -2,6 +2,7 @@
 @import './panelGroup.scss';
 @import './mainBench.scss';
 @import './defaultView.scss';
+@import './modelView.scss';
 .sidebar {
 
    .s-catalogue {
@@ -57,6 +58,18 @@
                 }
     
                 span.ant-tree-iconEle {
+                    &.ant-tree-icon_loading{
+                        position: relative;
+                        transform: none;
+                        left: initial;
+                        background-color: transparent;
+                        top: 0;
+                        &::after{
+                            position: absolute;
+                            left: -100%;
+                            background: #f5f5f5;
+                        }
+                    }
                     margin-top: -2px;
                     margin-right: 3px;
                     background-size: cover;
