--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/siderbar.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/siderbar.scss
@@ -11,9 +11,9 @@
         border-bottom: 1px solid #dddddd;
  
         .btn-icon {
-            width: 20px;
-            height: 20px;
-            margin-right: 8px;
+            font-size: 15px;
+            line-height: 21px;
+            margin-right: 12px;
             cursor: pointer;
         }
     }
