feat(science): add tree load

--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/layout.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/layout.scss
@@ -1,6 +1,7 @@
 .app-science {
     .sidebar {
         height: 100%;
+        position: relative;
     }
     .container{
         background: #ffffff;
