--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/index/index.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/index/index.scss
@@ -2,6 +2,7 @@
     padding: 0;
     background: #F5F5F5;
     height: 100%;
+    min-height: 700px;
 
     .welcome-page {
         background: #fff;
@@ -11,10 +12,6 @@
         position: relative;
         z-index: 999;
         height: 100%;
-
-        .ant-col-4.8 {
-            width: 20%;
-        }
 
         .info-box {
             box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.10);
@@ -102,7 +99,7 @@
     .projects-header {
         font-size: 16px;
         color: #333333;
-        margin-bottom: 3px;
+        margin-bottom: 16px;
 
         i {
             margin-right: 6px;
@@ -111,21 +108,44 @@
     }
 
     .ant-card-head {
-        padding: 3px 0;
+        padding: 0;
+        height: 30px;
+        line-height: 1;
         border-bottom: 0;
         font-size: 13px;
+        margin-bottom: 10px;
 
         .ant-input-search {
-            margin: 10px 0;
+            margin: 0;
+            height: 30px;
+
+            input {
+                @extend .ant-input-search
+            }
         }
 
         button {
-            margin: 10px 0 0 14px;
+            margin: 0;
+            background: #0099FF;
+            width: 104;
+            height: 30px;
+            border-radius: 3px;
         }
     }
 
     .ant-card-body {
         padding: 7px 0;
+
+        table {
+            border: 1px solid #DDDDDD;
+            border-bottom: 0;
+        }
+
+        .ant-table-placeholder {
+            border: 1px solid #DDDDDD;
+            border-top: 0;
+            margin-top: -1px;
+        }
     }
 }
 
