--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/source/index.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/source/index.scss
@@ -23,6 +23,16 @@
 
     .ant-card-body {
         padding: 10px 0;
+
+        table {
+            border: 1px solid #dddddd;
+            border-bottom: 0;
+        }
+        .ant-table-placeholder {
+            border: 1px solid #DDDDDD;
+            border-top: 0;
+            margin-top: -1px;
+        }
     }
 
 }
