feat(science): source table cannot delete datas

--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/index/index.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/index/index.scss
@@ -130,6 +130,7 @@
             width: 104;
             height: 30px;
             border-radius: 3px;
+            font-size: 14px;
         }
     }
 
