feat: experimental graph

--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/index.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/index.scss
@@ -3,6 +3,8 @@
 @import './mainBench.scss';
 @import './defaultView.scss';
 @import './modelView.scss';
+@import './graph.scss';
+
 .sidebar {
     
    .s-catalogue {
