feat(science): add editor panel run

--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/index.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/index.scss
@@ -4,7 +4,11 @@
 @import './defaultView.scss';
 @import './modelView.scss';
 .sidebar {
-    
+    &.c-component-siderbar{
+        .s-catalogue{
+            top: 10px;
+        }
+    }
    .s-catalogue {
 
         position: absolute;
