feat(science): add params d

--- a/engine-ui/packages/console-ui/src/webapps/science/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/main.scss
@@ -23,3 +23,10 @@
         background-color: #c2c2c2;
     }
 }
+table {
+    font-size: 12px;
+}
+.split-text {
+    float: left;
+    padding: 0px 5px;
+}
