--- a/engine-ui/packages/console-ui/src/webapps/science/components/commonEditor/ide.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/components/commonEditor/ide.scss
@@ -29,7 +29,7 @@
     .ide-content {
         // height: 100%;
         // padding-bottom: 50px;
-        top: 36px;
+        top: 41px;
         bottom: 0;
 
             .editor-view{
@@ -43,13 +43,14 @@
 
     .ide-toolbar {
         width: 100%;
-        height: 35px;
+        height: 40px;
         padding: 4px 0;
+        display: flex;
+        align-items: center;
 
         .ant-btn {
             position: relative;
             padding-left: 20px;
-            line-height: 28px;
             border: 0;
         }
         .ant-btn[disabled],
@@ -214,8 +215,8 @@
     width: 30px;
     z-index: 999;
     &.c-panel-siderbar--open{
-        width:300px;
-        box-shadow: -4px 10px 10px 0 rgba(0, 0, 0, 0.2);
+        width:329px;
+        box-shadow: -4px 10px 10px 0 rgba(0, 0, 0, 0.1);
     }
     &.ant-tabs-vertical{
         & > .ant-tabs-bar {
@@ -238,6 +239,7 @@
             }
         }
         > .ant-tabs-content{
+            padding-right: 0px;
             position: relative;
             height: 100%;
             background: #f5f5f5;
