--- a/engine-ui/packages/console-ui/src/webapps/science/components/commonEditor/ide.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/components/commonEditor/ide.scss
@@ -239,6 +239,8 @@
             }
         }
         > .ant-tabs-content{
+            overflow-y: auto;
+            overflow-x: hidden;
             padding-right: 0px;
             position: relative;
             height: 100%;
