--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/index.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/index.scss
@@ -102,6 +102,24 @@
         background-image: url(/public/science/img/database.svg);
     }
 }
+.o-tree-icon--notebook {
+    .ant-tree-iconEle::before {
+        color: #2491F7;
+        font-size: 16px;
+        content: "\E637";
+        display: block;
+        font-family: "anticon" !important;
+    }
+}
+.o-tree-icon--experiment {
+    .ant-tree-iconEle::before {
+        color: #2491F7;
+        font-size: 16px;
+        content: "\E6D7";
+        display: block;
+        font-family: "anticon" !important;
+    }
+}
 .s-tree-folder {
     &>.ant-tree-iconEle {
         background-image: url(/public/analyticsEngine/img/folder.svg);
