--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/index/index.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/index/index.scss
@@ -1,17 +1,15 @@
 .welcome {
     padding: 0;
     background: #F5F5F5;
-    height: 100%;
-    min-height: 700px;
-
+    min-height: 100%;
+    
     .welcome-page {
         background: #fff;
         box-shadow: 4px 2px 10px 0 rgba(0, 0, 0, 0.10);
-        padding: 20px;
-        overflow: hidden;
+        padding: 20px 20px 0px 20px;
         position: relative;
         z-index: 999;
-        height: 100%;
+        min-height: 100%;
 
         .info-box {
             box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.10);
