feat(science): add api

--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/siderbar.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/siderbar.scss
@@ -14,6 +14,11 @@
             margin-bottom: 2px;
         }
     }
+    .c-antd-tabs-sidebar__tab__img__icon {
+        height: 18px;
+        width: 18px;
+        margin-bottom: 2px;
+    }
     .toolbar {
         height: 35px;
         padding: 7px 7px;
