feat(science): add link

--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/siderbar.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/siderbar.scss
@@ -12,6 +12,7 @@
             height: 16px;
             margin: 0;
             margin-bottom: 2px;
+            color: #FFFFFF;
         }
     }
     .c-antd-tabs-sidebar__tab__img__icon {
