fix(science): fix bugs

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -230,6 +230,16 @@
                 background-image: url(/public/rdos/img/carbonsql.svg)
             }
         }
+        .s-notebook {
+            .ant-tree-icon__docu {
+                background-image: url(/public/rdos/img/notebook.svg)
+            }
+        }
+        .s-experiment {
+            .ant-tree-icon__docu {
+                background-image: url(/public/rdos/img/experiment.svg)
+            }
+        }
         .s-table {
             .ant-tree-icon__docu {
                 background-image: url(/public/rdos/img/table.svg)
