fix(science): fix import bug

--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/index/index.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/index/index.scss
@@ -25,7 +25,7 @@
             }
 
             &.orange {
-                border-left: 5px solid #F5BD23;
+                border-left: 5px solid #F5A623;
             }
 
             &.yellow {
