feat(science): science experiment

--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/graph.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/graph.scss
@@ -111,7 +111,7 @@
         }
     }
     /* 悬浮框的css */
-    #titleContent {
+    div.titleContent {
         position: absolute;
         cursor: default;
         padding:20px 10px;
