fix(science): fix style

--- a/engine-ui/packages/console-ui/src/webapps/science/components/taskParamsModal/taskParamsModal.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/components/taskParamsModal/taskParamsModal.scss
@@ -24,6 +24,7 @@
         .c-taskParams__row__value{
             display: flex;
             align-items: center;
+            word-break: break-all;
             padding: 0px 20px;
         }
     }
