--- a/engine-ui/packages/console-ui/src/webapps/science/components/commonEditor/ide.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/components/commonEditor/ide.scss
@@ -3,7 +3,6 @@
     position: relative;
     height: 100%;
     width: 100%;
-
     .ide-header, .ide-content {
         position: absolute;
         left: 0;
@@ -44,13 +43,13 @@
     .ide-toolbar {
         width: 100%;
         height: 40px;
-        padding: 4px 0;
+        padding: 4px 4px;
         display: flex;
         align-items: center;
-
         .ant-btn {
             position: relative;
-            padding-left: 20px;
+            padding: 0px 20px;
+            margin: 0px 2px;
             border: 0;
         }
         .ant-btn[disabled],
@@ -231,6 +230,7 @@
                 height: auto;
                 user-select: none;
                 writing-mode: tb-rl;
+                font-size: 13px;
             }
         }
         &.ant-tabs-right > .ant-tabs-bar{
